--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           font-size: 2em;
         }
       }
-    </style>
+</style>
   </head>
   <body>
     <div class="wrapper">
@@ -103,9 +103,8 @@
         <i class="fas fa-dollar-sign"></i>
         <span id="first-line-text">DRC REVENUE LOSS</span>
 	<span id="counter">USD $85,638,921</span>
-         <span class="text">Based on forfeit of $300K per day tax revenue <br>due to ministerial corruption delaying AVZ / Manono mine permit.</span>
+         <span class="text">Based on forfeit of $300K per day tax revenue from <br>AVZ / Manono mine delayed by ministerial corruption.</span>
       </div>
     </div>
   </body>
 </html>
-
