--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <i class="fas fa-dollar-sign"></i>
         <span id="first-line-text">DRC REVENUE LOSS</span>
 	<span id="counter">USD $85,638,921</span>
-         <span class="text">Based on forfeit of $300K per day tax revenue from <br>AVZ / Manono mine delayed by ministerial corruption.</span>
+         <span class="text">Based on forfeit of $300K per day since AVZ suspension<br>and Manono mine construction delayed by ministerial corruption.</span>
       </div>
     </div>
   </body>
