--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         margin-right: 5px;
       }
       span#first-line-text {
-        color: #ffffff;
+        color: #18f98f;
         display: grid;
         place-items: center;
         font-weight: 700;
