--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <span>$</span><span id="count">0</span><span>+</span>
           </div>
         </div>
-        <span class="text">Based on forfeit of $300K a day tax from AVZ / Manono mine delayed by DRC ministerial corruption & Chinese coercion.
+        <span class="text">Based on forfeit of $300K a day tax from AVZ / Manono mine<br>delayed by DRC ministerial corruption & Chinese coercion.
 
 
 	<script>
