--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="This is my awesome counter!">
   <meta property="og:title" content="DRC Lost Revenue Counter">
   <meta property="og:description" content="Calculates the amount of revenue the DRC has forfeited since issuing Decree for AVZ / Manono mining licence ">
-  <meta property="og:image" content="https://example.com/my-awesome-counter.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Spikerama/english_drctaxlosscounter/main/DRC%20Lost%20Revenue%20Counter.png">
   <meta property="og:url" content="https://english-drcmanonotaxlosscounter.netlify.app/">
   <meta property="og:type" content="website">
   <title>DRC Lost Revenue Counter</title>
