--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <span>$</span><span id="count">0</span><span>+</span>
           </div>
         </div>
-        <span class="text">Based on forfeit of $300K a day tax from<br>AVZ / Manono mine delayed by Chinese coercion & DRC ministerial corruption
+        <span class="text">Based on forfeit of $300K a day tax from AVZ / Manono mine<br>delayed by Chinese coercion & DRC ministerial corruption
 
 
 	<script>
