--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is my awesome counter!">
   <meta property="og:title" content="DRC Lost Revenue Counter">
   <meta property="og:description" content="Calculates the amount of revenue the DRC has forfeited since issuing Decree for AVZ / Manono mining licence ">
